Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59627

Crash when window decorations are disabled (or switching to fullscreen)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.5, 6.4.0 Beta1
    • 5.8.0, 6.2
    • QPA: Wayland
    • None

    Description

      If decorations are disabled while the window is updating there might be a crash.

      Too reproduce:

      Run the attached toggledecorations.qml with qmlscene, then press d repeatedly until the application crashes.

      Attachments

        1. toggledecorations.qml
          0.8 kB
          Johan Helsing

        Issue Links

          For Gerrit Dashboard: QTBUG-59627
          # Subject Branch Project Status CR V

          Activity

            People

              inho Inho Lee
              johanhelsing Johan Helsing
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes